--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 <body class="container center-align" style="margin-top: 80px;">
 
-  <h2 class="blue-text text-darken-2">Bienvenido a Social Media 🚀</h2>
+  <h2 class="blue-text text-darken-2">Bienvenido a Social Media Brandon🚀</h2>
   <p class="flow-text">Conéctate, comparte y explora publicaciones</p>
 
   <div class="row" style="margin-top: 50px;">
